[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/pentagram.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pentagram.gd" type="Script" id=2]
[ext_resource path="res://SpriteFrames/Torch.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Art/light.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 126.036

[node name="Pentagram" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TORCH1" type="AnimatedSprite" parent="."]
position = Vector2( 111, -30 )
frames = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="TORCH1"]
texture = ExtResource( 4 )
texture_scale = 0.34
color = Color( 1, 0.901961, 0.117647, 1 )
energy = 0.4

[node name="TORCH2" type="AnimatedSprite" parent="."]
position = Vector2( -75, 89 )
frames = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="TORCH2"]
texture = ExtResource( 4 )
texture_scale = 0.34
color = Color( 1, 0.901961, 0.117647, 1 )
energy = 0.4

[node name="TORCH3" type="AnimatedSprite" parent="."]
position = Vector2( -3, -117 )
frames = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="TORCH3"]
texture = ExtResource( 4 )
texture_scale = 0.34
color = Color( 1, 0.901961, 0.117647, 1 )
energy = 0.4

[node name="TORCH4" type="AnimatedSprite" parent="."]
position = Vector2( 59, 95 )
frames = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="TORCH4"]
texture = ExtResource( 4 )
texture_scale = 0.34
color = Color( 1, 0.901961, 0.117647, 1 )
energy = 0.4

[node name="TORCH5" type="AnimatedSprite" parent="."]
position = Vector2( -110, -29 )
frames = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="TORCH5"]
texture = ExtResource( 4 )
texture_scale = 0.34
color = Color( 1, 0.901961, 0.117647, 1 )
energy = 0.4
